Fix toilets pointing to the wrong icon Fix title

--- a/legend/index.html
+++ b/legend/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="stylesheet" href="images/mapkey.css" media="screen">
-		<title>Ma page de test</title>
+		<title>Légende carte MapUtagawa spéciale VTT pour GPS Garmin</title>
 	</head>
 	<body>
 		<div class="mapkey_heading">
@@ -689,7 +689,7 @@
 					</tr>
 					<tr class="mapkey-table-entry" >
 						<td class="mapkey_table_icon">
-							<img src="images/POI02f0c.png">
+							<img src="images/POI11516.png">
 						</td>
 						<td class="mapkey-table-value">
 							Toilettes
