Update legend with new style for : path, non feasible uphill path  with MTB and cycling path

--- a/legend/index.html
+++ b/legend/index.html
@@ -183,7 +183,7 @@
 							Chemin</td>
 					</tr>
 					<tr class="mapkey-table-entry" >
-					  <td class="mapkey_table_icon"><img src="images/Line10e0c.png"></td>
+					  <td class="mapkey_table_icon"><img src="images/LineChemin.png"></td>
 					  <td class="mapkey-table-value"> Sentier
 					    / Chemin (T[type de terrain 1-6] / G[niveau 1-6] / M(échelle difficulté VTT 1-6])</td>
 				  </tr>
@@ -196,9 +196,13 @@
 					  <td class="mapkey-table-value"> Escaliers</td>
 				  </tr>
 					<tr class="mapkey-table-entry" >
-					  <td class="mapkey_table_icon"><img src="images/Line10f07.png"></td>
+					  <td class="mapkey_table_icon"><img src="images/LineCyclable.png"></td>
 					  <td class="mapkey-table-value"> Piste cyclable </td>
 				  </tr>
+					<tr class="mapkey-table-entry" >
+					  <td class="mapkey_table_icon"><img src="images/LineVTT_montee.png"></td>
+					  <td class="mapkey-table-value"> Sentier non praticable à VTT en montée</td>
+					  </tr>
 					<tr class="mapkey-table-entry" >
 					  <td class="mapkey_table_icon"><img src="images/Line12114.png"><img src="images/POI04808.png"></td>
 					  <td class="mapkey-table-value"> Chemin non praticable ou interdit à VTT </td>
